container-engine/mongo-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mongo-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: mongo
        app: mongo
        tier: backend
        role: master
    spec:
      containers:
      - name: mongo
        image: mongo:latest
        ports:
        - name: mongo
          containerPort: 27017
        volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
      volumes:
        - name: mongo-persistent-storage
          gcePersistentDisk:
            pdName: my-parse-app-db-disk
            fsType: ext4
