container-engine/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
    tier: backend
    role: master
  
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: mongo
    app: mongo
    tier: backend
    role: master
