container-engine/parse-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-parse-app-service
spec:
  ports:
  - port: 80
    targetPort: 1337 
    protocol: TCP
    name: my-parse-app-service
  type: NodePort 
  selector:
    app: my-parse-app
